Fix text clipping in spotlight input
Fixes #1533

--- a/packages/rocketchat-theme/assets/stylesheets/base.less
+++ b/packages/rocketchat-theme/assets/stylesheets/base.less
@@ -1670,8 +1670,7 @@ a.github-fork {
 			border-width: 0px;
 			line-height: 46px;
 			height: 46px;
-			padding: 18px;
-			padding-left: 46px;
+			padding: 0 10px 0 46px;
 		}
 		> i {
 			position: absolute;
